// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`addCustomLineItem() should add the given line item to the given payload 1`] = `
Immutable.Map {
  "shipping_address": Immutable.Map {
    "zip": null,
    "city": null,
    "name": "Apu Nahasapeemapetilon",
    "latitude": null,
    "phone": null,
    "longitude": null,
    "province": null,
    "last_name": "Nahasapeemapetilon",
    "country_code": "FR",
    "country": "France",
    "first_name": "Apu",
    "province_code": null,
    "company": null,
    "address1": null,
    "address2": null,
  },
  "applied_discount": Immutable.Map {
    "title": "",
    "value": "100.00",
    "value_type": "percentage",
    "amount": "5.00",
  },
  "shipping_line": null,
  "billing_address": Immutable.Map {
    "zip": null,
    "city": null,
    "name": "Apu Nahasapeemapetilon",
    "latitude": null,
    "phone": null,
    "longitude": null,
    "province": null,
    "last_name": "Nahasapeemapetilon",
    "country_code": "FR",
    "country": "France",
    "first_name": "Apu",
    "province_code": null,
    "company": null,
    "address1": null,
    "address2": null,
  },
  "currency": "USD",
  "note": "ahahah??",
  "tax_exempt": false,
  "line_items": Immutable.List [
    Immutable.Map {
      "applied_discount": null,
      "taxable": true,
      "price": "1.00",
      "quantity": 1,
      "product_id": 8345093387,
      "product_exists": true,
      "properties": Immutable.List [],
      "variant_id": 31128766316567,
      "title": "Acidulous candy",
      "sku": "0987654321-1",
      "variant_title": "Red / A",
      "requires_shipping": true,
    },
    Immutable.Map {
      "applied_discount": null,
      "taxable": true,
      "price": "1.00",
      "quantity": 4,
      "product_id": 8345093387,
      "product_exists": true,
      "properties": Immutable.List [],
      "variant_id": 31128766349335,
      "title": "Acidulous candy",
      "sku": "0987654321-2",
      "variant_title": "Red / B",
      "requires_shipping": true,
    },
    Immutable.Map {
      "title": "Custom item",
      "price": "1.99",
      "quantity": 1,
      "taxable": true,
      "requires_shipping": true,
      "product_exists": false,
    },
  ],
  "tags": null,
  "customer": Immutable.Map {
    "id": 2721145061399,
  },
}
`;

exports[`addVariant() should add the given variant to the given payload, because variant is not in the payload yet 1`] = `
Immutable.Map {
  "shipping_address": Immutable.Map {
    "zip": null,
    "city": null,
    "name": "Apu Nahasapeemapetilon",
    "latitude": null,
    "phone": null,
    "longitude": null,
    "province": null,
    "last_name": "Nahasapeemapetilon",
    "country_code": "FR",
    "country": "France",
    "first_name": "Apu",
    "province_code": null,
    "company": null,
    "address1": null,
    "address2": null,
  },
  "applied_discount": Immutable.Map {
    "title": "",
    "value": "100.00",
    "value_type": "percentage",
    "amount": "5.00",
  },
  "shipping_line": null,
  "billing_address": Immutable.Map {
    "zip": null,
    "city": null,
    "name": "Apu Nahasapeemapetilon",
    "latitude": null,
    "phone": null,
    "longitude": null,
    "province": null,
    "last_name": "Nahasapeemapetilon",
    "country_code": "FR",
    "country": "France",
    "first_name": "Apu",
    "province_code": null,
    "company": null,
    "address1": null,
    "address2": null,
  },
  "currency": "USD",
  "note": "ahahah??",
  "tax_exempt": false,
  "line_items": Immutable.List [
    Immutable.Map {
      "applied_discount": null,
      "taxable": true,
      "price": "1.00",
      "quantity": 1,
      "product_id": 8345093387,
      "product_exists": true,
      "properties": Immutable.List [],
      "variant_id": 31128766316567,
      "title": "Acidulous candy",
      "sku": "0987654321-1",
      "variant_title": "Red / A",
      "requires_shipping": true,
    },
    Immutable.Map {
      "applied_discount": null,
      "taxable": true,
      "price": "1.00",
      "quantity": 4,
      "product_id": 8345093387,
      "product_exists": true,
      "properties": Immutable.List [],
      "variant_id": 31128766349335,
      "title": "Acidulous candy",
      "sku": "0987654321-2",
      "variant_title": "Red / B",
      "requires_shipping": true,
    },
    Immutable.Map {
      "taxable": true,
      "price": "9.99",
      "quantity": 1,
      "product_id": 1,
      "product_exists": true,
      "properties": Immutable.List [],
      "variant_id": 1,
      "title": "Product 1",
      "sku": "11111",
      "variant_title": "Variant 1",
      "requires_shipping": true,
    },
  ],
  "tags": null,
  "customer": Immutable.Map {
    "id": 2721145061399,
  },
}
`;

exports[`addVariant() should update quantity of the given variant in the given payload, because variant is already in the payload 1`] = `
Immutable.Map {
  "shipping_address": Immutable.Map {
    "zip": null,
    "city": null,
    "name": "Apu Nahasapeemapetilon",
    "latitude": null,
    "phone": null,
    "longitude": null,
    "province": null,
    "last_name": "Nahasapeemapetilon",
    "country_code": "FR",
    "country": "France",
    "first_name": "Apu",
    "province_code": null,
    "company": null,
    "address1": null,
    "address2": null,
  },
  "applied_discount": Immutable.Map {
    "title": "",
    "value": "100.00",
    "value_type": "percentage",
    "amount": "5.00",
  },
  "shipping_line": null,
  "billing_address": Immutable.Map {
    "zip": null,
    "city": null,
    "name": "Apu Nahasapeemapetilon",
    "latitude": null,
    "phone": null,
    "longitude": null,
    "province": null,
    "last_name": "Nahasapeemapetilon",
    "country_code": "FR",
    "country": "France",
    "first_name": "Apu",
    "province_code": null,
    "company": null,
    "address1": null,
    "address2": null,
  },
  "currency": "USD",
  "note": "ahahah??",
  "tax_exempt": false,
  "line_items": Immutable.List [
    Immutable.Map {
      "applied_discount": null,
      "taxable": true,
      "price": "1.00",
      "quantity": 1,
      "product_id": 8345093387,
      "product_exists": true,
      "properties": Immutable.List [],
      "variant_id": 31128766316567,
      "title": "Acidulous candy",
      "sku": "0987654321-1",
      "variant_title": "Red / A",
      "requires_shipping": true,
    },
    Immutable.Map {
      "applied_discount": null,
      "taxable": true,
      "price": "1.00",
      "quantity": 4,
      "product_id": 8345093387,
      "product_exists": true,
      "properties": Immutable.List [],
      "variant_id": 31128766349335,
      "title": "Acidulous candy",
      "sku": "0987654321-2",
      "variant_title": "Red / B",
      "requires_shipping": true,
    },
    Immutable.Map {
      "taxable": true,
      "price": "9.99",
      "quantity": 2,
      "product_id": 1,
      "product_exists": true,
      "properties": Immutable.List [],
      "variant_id": 1,
      "title": "Product 1",
      "sku": "11111",
      "variant_title": "Variant 1",
      "requires_shipping": true,
    },
  ],
  "tags": null,
  "customer": Immutable.Map {
    "id": 2721145061399,
  },
}
`;

exports[`getSubtotal() should return the sub total when there is an applied discount 1`] = `0`;

exports[`getSubtotal() should return the sub total when there is no applied discount 1`] = `5`;

exports[`getTaxLineLabel() should return the correct label without rounding errors 1`] = `"TVA 7.25%"`;

exports[`getTaxLineLabel() should return the label of the given tax line 1`] = `"TVA 20.00%"`;

exports[`getTotal() should return the total of the given draft order when there are taxes 1`] = `8`;

exports[`getTotal() should return the total of the given draft order when there is a shipping line 1`] = `17`;

exports[`getTotal() should return the total of the given draft order when there is an applied discount 1`] = `0`;

exports[`getTotal() should return the total of the given draft order when there is no applied discount 1`] = `5`;

exports[`getTotalShippingPrice() should return the total shipping price when it is not set 1`] = `0`;

exports[`getTotalShippingPrice() should return the total shipping price when it is set 1`] = `12`;

exports[`getTotalTaxes() should return the total taxes 1`] = `3`;

exports[`initDraftOrderPayload() should return draft order payload for the given order 1`] = `
Immutable.Map {
  "shipping_address": Immutable.Map {
    "zip": null,
    "city": null,
    "name": "Apu Nahasapeemapetilon",
    "latitude": null,
    "phone": null,
    "longitude": null,
    "province": null,
    "last_name": "Nahasapeemapetilon",
    "country_code": "FR",
    "country": "France",
    "first_name": "Apu",
    "province_code": null,
    "company": null,
    "address1": null,
    "address2": null,
  },
  "shipping_line": null,
  "billing_address": Immutable.Map {
    "zip": null,
    "city": null,
    "name": "Apu Nahasapeemapetilon",
    "latitude": null,
    "phone": null,
    "longitude": null,
    "province": null,
    "last_name": "Nahasapeemapetilon",
    "country_code": "FR",
    "country": "France",
    "first_name": "Apu",
    "province_code": null,
    "company": null,
    "address1": null,
    "address2": null,
  },
  "currency": "USD",
  "note": "ahahah??",
  "tax_exempt": false,
  "line_items": Immutable.List [
    Immutable.Map {
      "applied_discount": null,
      "taxable": true,
      "price": "1.00",
      "quantity": 1,
      "product_id": 8345093387,
      "product_exists": true,
      "properties": Immutable.List [],
      "variant_id": 31128766316567,
      "title": "Acidulous candy",
      "sku": "0987654321-1",
      "variant_title": "Red / A",
      "requires_shipping": true,
    },
    Immutable.Map {
      "applied_discount": null,
      "taxable": true,
      "price": "1.00",
      "quantity": 4,
      "product_id": 8345093387,
      "product_exists": true,
      "properties": Immutable.List [],
      "variant_id": 31128766349335,
      "title": "Acidulous candy",
      "sku": "0987654321-2",
      "variant_title": "Red / B",
      "requires_shipping": true,
    },
  ],
  "tags": null,
  "customer": Immutable.Map {
    "id": 2721145061399,
  },
}
`;

exports[`initDraftOrderPayload() should return draft order payload for the given order when products are missing 1`] = `
Immutable.Map {
  "shipping_address": Immutable.Map {
    "zip": null,
    "city": null,
    "name": "Apu Nahasapeemapetilon",
    "latitude": null,
    "phone": null,
    "longitude": null,
    "province": null,
    "last_name": "Nahasapeemapetilon",
    "country_code": "FR",
    "country": "France",
    "first_name": "Apu",
    "province_code": null,
    "company": null,
    "address1": null,
    "address2": null,
  },
  "shipping_line": null,
  "billing_address": Immutable.Map {
    "zip": null,
    "city": null,
    "name": "Apu Nahasapeemapetilon",
    "latitude": null,
    "phone": null,
    "longitude": null,
    "province": null,
    "last_name": "Nahasapeemapetilon",
    "country_code": "FR",
    "country": "France",
    "first_name": "Apu",
    "province_code": null,
    "company": null,
    "address1": null,
    "address2": null,
  },
  "currency": "USD",
  "note": "ahahah??",
  "tax_exempt": false,
  "line_items": Immutable.List [
    Immutable.Map {
      "applied_discount": null,
      "taxable": true,
      "price": "1.00",
      "quantity": 1,
      "product_id": null,
      "product_exists": false,
      "properties": Immutable.List [],
      "variant_id": null,
      "title": "Acidulous candy",
      "sku": "0987654321-1",
      "variant_title": "Red / A",
      "requires_shipping": true,
    },
    Immutable.Map {
      "applied_discount": null,
      "taxable": true,
      "price": "1.00",
      "quantity": 4,
      "product_id": null,
      "product_exists": false,
      "properties": Immutable.List [],
      "variant_id": null,
      "title": "Acidulous candy",
      "sku": "0987654321-2",
      "variant_title": "Red / B",
      "requires_shipping": true,
    },
  ],
  "tags": null,
  "customer": Immutable.Map {
    "id": 2721145061399,
  },
}
`;
